...
  Widget build(BuildContext context) => f.ContentDialog(
    constraints: const BoxConstraints(maxWidth: 740, maxHeight: 760),
    title: const Text('设置'),
    actions: [
      f.FilledButton(
        onPressed: () => Navigator.pop(context),
        child: const Text('完成'),
      ),
    ],
    content: SingleChildScrollView(
      child: Column(
        crossAxisAlignment: CrossAxisAlignment.stretch,
        children: [
...
